# api-key-generator

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: main.rs
