[package]
name = "api-key-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.21.0"
uuid = { version = "1.3.0", features = ["v4"] }
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
env_logger = "0.10.0"
log = "0.4.17"
actix-cors = "0.6.4"
chrono = "0.4.24"
